// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Container> html tree props added 1`] = `
<svg
  className="test-class"
  height={100}
  stoke="none"
  width={200}
>
  <g />
</svg>
`;

exports[`<Container> renders children 1`] = `
<svg
  height={100}
  width={200}
>
  <text>
    Extra child
  </text>
  <g>
    <Link
      key="Black"
      keyProp="name"
      pathFunc={[Function]}
      pathProps={{}}
      source={
        {
          "data": {
            "name": "Colour",
          },
          "x": 1,
          "y": 2,
        }
      }
      target={
        {
          "data": {
            "name": "Black",
          },
          "x": 100,
          "y": 50,
        }
      }
      x1={1}
      x2={100}
      y1={2}
      y2={50}
    />
    <Node
      gProps={{}}
      key="Colour"
      keyProp="name"
      labelProp="name"
      name="Colour"
      nodeProps={{}}
      shape="circle"
      textProps={{}}
      x={1}
      y={2}
    />
    <Node
      gProps={{}}
      key="Black"
      keyProp="name"
      labelProp="name"
      name="Black"
      nodeProps={{}}
      shape="circle"
      textProps={{}}
      x={100}
      y={50}
    />
  </g>
</svg>
`;

exports[`<Container> renders correctly 1`] = `
<svg
  height={100}
  width={200}
>
  <g>
    <Link
      key="Black"
      keyProp="name"
      pathFunc={[Function]}
      pathProps={{}}
      source={
        {
          "data": {
            "name": "Colour",
          },
          "x": 1,
          "y": 2,
        }
      }
      target={
        {
          "data": {
            "name": "Black",
          },
          "x": 100,
          "y": 50,
        }
      }
      x1={1}
      x2={100}
      y1={2}
      y2={50}
    />
    <Node
      gProps={{}}
      key="Colour"
      keyProp="name"
      labelProp="name"
      name="Colour"
      nodeProps={{}}
      shape="circle"
      textProps={{}}
      x={1}
      y={2}
    />
    <Node
      gProps={{}}
      key="Black"
      keyProp="name"
      labelProp="name"
      name="Black"
      nodeProps={{}}
      shape="circle"
      textProps={{}}
      x={100}
      y={50}
    />
  </g>
</svg>
`;
